@@ -2,6 +2,7 @@
 x.x:
 
 - added: widget title links for blog widget
+- added: index_blog widget simple mode
 - fixed: incorrect context in index_blog widget
 - fixed: blog widget more link in widget
 - fixed: deprecated notices in combination with widget_manager
